[gd_scene load_steps=4 format=3 uid="uid://baje1fv4yqxy5"]

[ext_resource type="Texture2D" uid="uid://q7lgopk72l3c" path="res://Assets/alchemyArt.png" id="1_a0dg8"]
[ext_resource type="Script" path="res://UI/notice_board_button.gd" id="2_wucxu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1ovb8"]
atlas = ExtResource("1_a0dg8")
region = Rect2(720.544, 17.7533, 77.3334, 53.3333)

[node name="NoticeBoardButton" type="TextureButton"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -156.0
offset_bottom = 102.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(124, 17)
texture_normal = SubResource("AtlasTexture_1ovb8")
script = ExtResource("2_wucxu")

[connection signal="mouse_entered" from="." to="." method="noticeBoardStartHover"]
[connection signal="mouse_exited" from="." to="." method="noticeBoardStopHover"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
